force-app/main/default/objects/Task_History__c/Task_History__c.object-meta.xml
<CustomObject>
    <label>Task History</label>
    <nameField>
        <label>Task History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>