force-app/main/default/objects/Task_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>