force-app/main/default/objects/Task_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>